<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blacklist_line_1"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blacklist_line_2"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20dp" />

    <Button
        android:id="@+id/phone"
        style="@style/CommonButton.Orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/contact_customer_service"/>

    <Button
        android:id="@+id/exit"
        style="@style/CommonButton.Red"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/exit_app"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:src="@drawable/fenghaotu"/>


</LinearLayout>