<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <include layout="@layout/title"/>
    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/bigicon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="95dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jianzhidaren"
        android:textSize="20dp"
        android:textColor="#363636"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="V 3.0"
        android:textSize="13dp"
        android:textColor="#999999"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_line1"
        android:textSize="13dp"
        android:textColor="#363636"
        android:layout_marginTop="@dimen/about_txt_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_line2"
        android:textSize="13dp"
        android:textColor="#363636"
        android:layout_marginTop="@dimen/about_txt_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_line3"
        android:textSize="13dp"
        android:textColor="#363636"
        android:layout_marginTop="@dimen/about_txt_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_line4"
        android:textSize="13dp"
        android:textColor="#363636"
        android:layout_marginTop="@dimen/about_txt_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_line5"
        android:textSize="13dp"
        android:textColor="#363636"
        android:layout_marginTop="@dimen/about_txt_margin"/>


</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="青木网络科技公司©2015"
        android:textSize="11dp"
        android:textColor="#999999"
        android:layout_marginTop="@dimen/about_txt_margin"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp" />
    </RelativeLayout>